apps/site/web/static/css/_header.scss
@import 'variables';

.desktop-menu-nav {
  @include make-col-span(8);
  float: right;

  @include media-breakpoint-down(sm) {
    display: none;
  }

  > div {
    float: right;
  }

  .nav-item {
    float: left;
    height: $header-navbar-height;
    padding-left: $grid-gutter-width / 2;
    padding-right: $grid-gutter-width / 2;
    text-align: right;

    > a {
      line-height: $header-navbar-height-multiplier;
      vertical-align: middle;
      text-decoration: none;
    }
  }
}

.desktop-menu-body {
  // adjust some margin/padding to replicate the previous styles.  If you're
  // making other changes that affect Backstop, you can probably remove
  // these and simplify the layout.
  margin-left: -$grid-gutter-width / 2;
  margin-right: -$grid-gutter-width / 2;

  > div {
    padding-left: $grid-gutter-width / 2;
    padding-right: $grid-gutter-width / 2;
    width: 100%;
  }
}

.desktop-nav-link {
  color: $link-color;
  display: inline-block;
  font-weight: bold;
  position: relative;

  &::before {
    border-bottom-color: $brand-secondary;
    border-bottom-style: solid;
    border-bottom-width: $space-6;
    bottom: 0;
    content: ' ';
    position: absolute;
    width: 100%;
  }

  &.collapsed {
    color: $gray-dark;
    font-weight: normal;

    &::before {
      border-bottom-width: 0;
    }
  }
}

.toggle-up-down {
  > .down {
    display: none;
  }

  > .up {
    display: inline;
  }

  &.collapsed {
    > .down {
      display: inline;
    }

    > .up {
      display: none;
    }
  }
}

.desktop-menu {
  // The same pattern repeated thrice upon the y-axis and infinitely along the x-axis
  background-color: $brand-navy-dark;
  background-image: $desktop-header-pattern, $desktop-header-pattern, $desktop-header-pattern;
  background-position: 0 0, 6px 6px, 12px 12px, 18px 18px;
  background-repeat: repeat no-repeat;
  color: $white;
  padding: 0;
  position: absolute;
  left: 0;
  right: 0;
  margin-bottom: 0;
  text-align: left;
  z-index: $z-index-above-main-container-content;

  @include media-breakpoint-down(sm) {
    display: none;
  }

  ul {
    @include list-unstyled();
  }
}

// scss-lint:disable IdSelector
#more {
  .header-column {
    &:first-child {
      padding-left: $grid-gutter-width / 2;
    }

    &:last-child {
      padding-right: $grid-gutter-width / 2;
    }
  }
}

.menu-row {
  display: table;
  margin-bottom: $space-36;
  padding-top: $space-36;
  width: 100%;
}

.menu-link-row {
  padding-bottom: $space-24;
}

.header-column {
  border-left: 1px solid $white;
  display: table-cell;
  float: none;
  padding-left: $space-24;
  padding-right: $space-24;

  a {
    color: $brand-primary-light;
  }

  &:first-child {
    border-left-width: 0;
  }
}

.fares-column {
  a {
    color: $brand-primary-light;
  }
}

.nav-title {
  font-weight: bold;
  margin-bottom: .5rem;
}

.social-nav {
  bottom: 3rem;
  height: 0;
  padding: 0;
  margin-top: $space-8;

  a {
    border-radius: 100%;
    color: $white;
    height: 1.5em;
    text-align: center;
    width: 1.5em;
  }

  .nav-item {
    text-align: right;
  }
}

.social-nav-instagram {
  background-color: $white;

  .fa {
    color: $instagram;
  }
}

.social-nav-youtube {
  background-color: $youtube;
}

.social-nav-twitter {
  background-color: $twitter;
}

header {
  background-color: $brand-primary;
  color: $white;

  @include media-breakpoint-up(md) {
    background-color: $body-bg;
    color: $body-color;
  }
}

.header-border {
  @include media-breakpoint-up(md) {
    border-bottom: $border;
  }
}

.header-navbar {
  // required for the mobile button to be vertically centered
  height: $header-navbar-height;
}

.navbar-logo {
  display: block;

  svg {
    display: block;
    height: $header-navbar-height;
    width: $base-spacing * 12; // setting the width keeps the rendered logo proportional,
                               // while adding space above and below inside the svg.

    @include media-breakpoint-down(sm) {
      g {
        fill: $white;
      }
    }
  }
}

.navbar-toggle {
  background-color: $brand-primary;
  border: 0;
  font-size: $font-size-sm;
  height: 100%;
  padding-bottom: $base-spacing-sm;
  padding-top: $base-spacing-sm;
  text-align: center;
  vertical-align: middle;

  @include media-breakpoint-up(md) {
    display: none;
  }
}

.mobile-nav {
  @include list-unstyled();
  text-align: center;
  width: 100%;

  @include media-breakpoint-up(md) {
    display: none;

    a {
      height: 3rem;
    }
  }
}

.mobile-nav-link {
  color: $white;
  display: block;
  height: 3rem;
  margin-bottom: $base-spacing;

  @include hover-focus-active {
    color: $white;
  }

  &.old-site-mobile-link {
    background-color: $brand-primary-dark;
    color: $gray-lightest;
    height: ($space-16 * 4);
    margin-bottom: -$space-16 * 2;
    margin-left: -$grid-gutter-width / 2;
    margin-right: -$grid-gutter-width / 2;
    padding-top: 1.2rem;
  }
}

.mobile-nav-description {
  color: $gray-lightest;
  font-size: $font-size-sm;
}

.old-site-desktop-link {
  background-color: $white;
  border-radius: 3px;
  color: $brand-primary;
  font-weight: bold;
  padding: $space-12 0;
  text-align: center;
}

